# implementacao_pdi

./: CHECKLIST_M1.1.md  CMakeLists.txt  DOCUMENTACAO.md  INSTRUCOES.md  Makefile  README.md  install_deps.sh
app/: demo_simple.cpp  run.cpp  test.cpp  test_m1.cpp  test_no_gui.cpp
include/: imageinfo.hpp
include/arit/: arithmetic.hpp
include/conv/: channel_isolator.hpp  grayscale.hpp
include/histo/: histogram.hpp
include/thre/: threshold.hpp
src/: imageinfo.cpp
src/arit/: arithmetic.cpp
src/conv/: channel_isolator.cpp  grayscale.cpp
src/histo/: histogram.cpp
src/thre/: threshold.cpp
